fixed body width overflow

--- a/styles.css
+++ b/styles.css
@@ -4,28 +4,37 @@
     box-sizing: border-box;
 }
 
-body {
-    height: 100vh;
-    width: 100vw;
-    border: 2px solid green;
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
+#banner {
+    position: absolute;
+    top: 20%;
+    background-color: black;
+    opacity: 0.05;
+    height: 15%;
+    width: 100%;
 }
 
 form {
-    width: 75%;
+    width: 65%;
     height: 100%;
     margin-left: 35%;
     text-align: left;
     border: 2px solid red;
 }
 
-#form-header {
+#header {
     height: 40%;
 }
-#form-body {
+
+#input-div {
     width: 100%;
     height: 25%;
-    background-color: #ddd;
-    box-shadow: 2%;
+    background-color: #f9f9f9;
+    box-shadow: #ddd 0 5px 5px;
 }
 
 fieldset {
